Enhance: support README in Scripts/foo.fam, foo.exp

--- a/Local/www-resources/ensemble-reports.css
+++ b/Local/www-resources/ensemble-reports.css
@@ -161,3 +161,53 @@ nav li a:hover {
   left: -9999em;
   top: 0;
 }
+
+/* 
+ * suport tooltips for Experiments/Families with README information
+ */
+
+/* From: https://www.w3schools.com/css/css_tooltip.asp (2024-12) 
+   HTML: Use a container element (like <div>) and add the "tooltip" class to it. 
+         When the user mouse over this <div>, it will show the tooltip text.
+    The tooltip text is placed inside an inline element (like <span>) 
+    with class="tooltiptext".
+*/
+
+/* Tooltip container */
+.tooltip {
+  position: relative;
+  display: inline-block;
+  /* border-bottom: 1px dotted black; */ /* If you want dots under the hoverable text */
+}
+
+/* Tooltip text */
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 400px;
+  background-color: lightsteelblue;
+  color: black;
+  text-align: center;
+  padding: 5px 0;
+  border-radius: 6px;
+ 
+  /* Position the tooltip text - see examples below! */
+  position: absolute;
+  z-index: 1;
+}
+
+/* Show the tooltip text when you mouse over the tooltip container */
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+}
+
+.tooltip .tooltiptext::after {
+  content: " ";
+  position: absolute;
+  top: 50%;
+  right: 100%; /* To the left of the tooltip */
+  margin-top: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: transparent black transparent transparent;
+}
+
